# AzureDemo_AVR-IoT_Wx

./: .gitignore
Tools/crypto_lib/: CMakeLists.txt  crypto_lib_api.c
Tools/crypto_lib/crypto_lib/: crypto_lib.vcxproj  crypto_lib.vcxproj.filters
Tools/crypto_lib/include/: crypto_lib_api.h
Tools/crypto_lib/source/: crypto_port.c  m2m_types.h
Tools/image_builder/: main.c
Tools/image_builder/image_builder/: builder.h  image_builder.vcxproj
Tools/image_cloner/image_cloner/: image_cloner.vcxproj
Tools/image_downloader/image_downloader/: image_downloader.vcxproj
Tools/programmer/: programmer.c  programmer.h
Tools/root_certificate_downloader/: root_certificate_downloader.vcxproj
Tools/tls_cert_flash_tool/: CMakeLists.txt  main.c  stack.txt  test-setup.sh  tls_cert_flash_tool.sln
Tools/tls_cert_flash_tool/extracted-certs/: RSA_AWS IoT Certificate.cer  private-key.asn1  private-key.der  private-key.pem  private-key.sh  public-key.sh  public-rsa-cert-1.asn1  public-rsa-cert-2.asn1  public-rsa-cert-3.asn1  public-rsa-cert-6.asn1  public-rsa-cert-7.asn1  public-rsa-cert-8.asn1
Tools/tls_cert_flash_tool/ioxy-certs/ca/: rootCA.cer
Tools/tls_cert_flash_tool/tls_cert_flash_tool/: tls_cert_flash_tool.vcxproj  tls_cert_flash_tool.vcxproj.filters
common/efuse/: efuse.c  efuse.h
common/fw_info/: fw_info.h
common/ota/: ota_hdr.h
common/root_cert/: root_setup.c  root_setup.h  tls_cert_store_win.c  tls_srv_sec.c  tls_srv_sec.h
common/simple_uart/: simple_uart.c
common/tinyheaders/: tinyfiles.h
firmware/wifi_v111/src/nmi_m2m/include/: crypto_conf.h
firmware/wifi_v111/src/nmi_m2m/source/crypto/: aes.c  aes_gcm.c  rsa.c
firmware/wifi_v111/src/nmi_m2m/source/tls/x509/: x509_cert.c  x509_cert.h
host_drv/bsp/include/: nm_bsp.h  nm_bsp_linux.h
host_drv/bsp/source/: nm_bsp_linux.c
host_drv/bus_wrapper/include/: nm_bus_wrapper.h
host_drv/bus_wrapper/source/: nm_bus_wrapper_linux_uart.c  nm_bus_wrapper_win_uart.c
winc-fw-upgrade/flashing_env/WINC1500_IoT_REL_19_6_1_30MAY2018_ATmega4808-4809/src/Tools/image_downloader/image_downloader/: firmware_setup.c
winc-fw-upgrade/flashing_env/WINC1500_IoT_REL_19_6_1_30MAY2018_ATmega4808-4809/src/common/common_values/: common_values.h
winc-fw-upgrade/flashing_env/WINC1500_IoT_REL_19_6_1_30MAY2018_ATmega4808-4809/src/common/root_cert/: tls_srv_sec.c
winc-fw-upgrade/flashing_env/WINC1500_IoT_REL_19_6_1_30MAY2018_ATmega4808-4809/src/firmware/wifi_v111/src/nmi_m2m/include/: crypto_conf.h
winc-fw-upgrade/flashing_env/WINC1500_IoT_REL_19_6_1_30MAY2018_ATmega4808-4809/src/firmware/wifi_v111/src/nmi_m2m/source/crypto/: aes_cbc.c  aes_gcm.c  bigint.c
